src/scss/style.scss
/* ... */
.fbx-wrap {
    position: sticky;
    top: 0;
    margin-left: -1.5rem;
    width: 100vw;
    border-bottom: 1px solid $bordercolor;
    backface-visibility: hidden;
    z-index: 30;

    body.type-post & {
        margin: 0;
    }

    @media($desktop) {
        position: absolute;
        right: 0;
        left: 0;
        margin: 0;
        width: 100%;
        border: none;
    }

    label {
        transform: scale(0.7);
        display: inline-block;
        position: absolute;
        left: 1rem;
        z-index: 24;
        color: rgba(white, 0.5);
        margin-top: 0.33rem;

        @media($desktop) {
            top: 0.88rem;
            left: 2.5rem;
            margin: 0;
        }
    }

    input {
        $size: 1.125rem;
        position: relative;
        width: 100%;
        max-width: 100%;
        border: none;
        border-radius: 0;
        border-bottom: 1px solid transparent;
        line-height: 3rem;
        height: 3rem;
        padding: 0 0 0 3.75rem;
        z-index: 10;
        background: darken($paleblue, 10%);
        color: white;
        margin-bottom: -1px;

        @media($desktop) {
            background: transparent;
            line-height: 4rem;
            height: 4rem;
            padding-left: 6rem;
            margin: 0;
        }

        @include placeholder {
            color: rgba(white, 0.33);
        }

        &:focus {
            @media($desktop) {
                border-color: rgba(white, 0.16);
            }

            @include placeholder {
                color: rgba(white, 0.5);
            }
        }

        &[data-has-filter="1"] {
            ~.post-list {
                height: auto;
                overflow: auto;

                &::before {
                    background: rgba(darken($paleblue, 20%), 0.84);
                    transform: scaleY(1);
                }
            }
        }

        &[data-no-match="1"] {
            ~.search-counter {
                position: absolute;
                top: 10rem;
                right: auto;
                left: 0;
                width: 100%;
                display: block;
                text-align: center;
                z-index: 40;
                color: rgba(white, 0.75);
                font-style: normal;
                font-size: 0.92rem;
                letter-spacing: 1px;
            }

            ~.post-list {
                &::before {
                    background: rgba(darken($paleblue, 20%), 0.94);
                }
            }
        }
    }

    body.page-home &,
    body.page-tags &,
    body.page-tagpages & {
        @media($desktop) {
            label {
                color: rgba($base, 0.5);
            }

            input {
                color: $base;

                @include placeholder {
                    color: rgba($base, 0.33);
                }

                &:focus {
                    border-color: $bordercolor;
                    background: white;

                    @include placeholder {
                        color: rgba($base, 0.5);
                    }
                }
            }
        }
    }
}

body:not(.type-post) main .left-offset>*:not(.fbx-wrap) {
    @extend .max-content;
}

.post-list .fbx-keynav-active {
    background: lighten($hlcolor, 27%) !important;
}

.post-list {
    position: relative;
    padding: 0;
    margin: 0;
    list-style: none;
    width: 100%;
    height: 0;
    overflow: auto;
    max-height: calc(100vh - 4rem);
    z-index: 8;

    @media($desktop) {
        position: absolute;
    }

    &::before {
        content: "";
        position: fixed;
        display: block;
        transform-origin: top;
        transform: scaleY(0);
        top: 0;
        right: 0;
        left: 0;
        height: 100vh;
        transition: background 0.2s;
        background: transparent;
        backface-visibility: hidden;
        z-index: -1;
    }

    li {
        background: white;

        a {
            margin-top: -1px;
            border-top: 1px solid rgba($bordercolor, 0.5);
        }

        @media($desktop) {
            padding-left: 6rem;
        }
    }

    a {
        display: block;
        padding: 1rem 1rem 1rem 3.75rem;
        color: $base;
        text-decoration: none;

        @media($desktop) {
            padding-left: 0;
        }

        &:hover {
            p.title {
                text-decoration: underline;
            }
        }
    }

    p {
        margin: 0;
        font-size: 0.97rem;
        padding-right: 2rem;
        display: none;

        @media($desktop) {
            display: block;
        }
    }

    p.title {
        @extend h3;
        margin: 0 0 -0.25rem;
        color: $paleblue;
        line-height: 1.25;

        @media($desktop) {
            margin: 0;
        }
    }

    .year {
        position: absolute;
        left: 2rem;
        opacity: 0.5;

        @media($max-tablet) {
            display: none;
        }
    }
}

.search-counter {
    color: rgba(white, 0.4);
    font-size: 0.9rem;
    font-style: italic;
    line-height: 4rem;
    position: absolute;
    right: 2rem;
    top: 0;
    margin-top: -0.6rem;
    z-index: 12;

    body.page-home & {
        color: rgba($base, 0.4);
    }

    @media($desktop) {
        margin-top: 0;
    }
}

fbxhl.on {
    background: rgba($hlcolor, 0.4);
    // border-bottom: 2px solid $hlcolor;
}

blockquote {
    border-left: 0.3rem solid $bordercolor;
    padding-left: 1.5rem;
    margin: 1.25rem 0 2rem;
}

@media ($tablet) {
    ::-webkit-scrollbar {
        width: 21px;
        height: 21px;

        &-track {
            background: transparent;
        }

        &-thumb {
            background: $paleblue;
            border: 13px solid transparent;
            background-clip: content-box !important;

            &:hover {
                background: lighten($paleblue, 10%);
            }
        }
    }
}
/* ... */

